# filament-ifc-proto

./: .gitignore  .gitmodules  Cargo.toml  DISCLAIMER  LICENSE  NOTICE  README.md  rustfmt.toml
examples/all_function_calls/: Cargo.toml  README.md
examples/all_function_calls/src/: main.rs
examples/battleship-no-ifc/: time.sh
examples/battleship-no-ifc/src/: main.rs
examples/battleship_new/: Cargo.toml  README.md  time.sh
examples/battleship_new/src/: main.rs
examples/calendar/: Cargo.toml  README.md  time.sh
examples/calendar-no-ifc/: Cargo.toml  time.sh
examples/calendar-no-ifc/src/: main.rs
examples/calendar/src/: main.rs
examples/dynamic_examples/: Cargo.toml
examples/dynamic_examples/src/: main.rs
examples/jpmail/: Cargo.toml  time.sh
examples/jpmail-no-ifc/: Cargo.toml
examples/jpmail-no-ifc/src/: crypto.rs  main.rs  net.rs  password.rs  policy.rs
examples/jpmail/src/: crypto.rs  main.rs  net.rs  password.rs  policy.rs
examples/spotify-tui/: Cargo.toml  time.sh
examples/spotify-tui-original/: time.sh
examples/spotify-tui-original/src/: config.rs  main.rs  network.rs  redirect_uri.rs
examples/spotify-tui/src/: app.rs  config.rs  main.rs  network.rs  user_config.rs  util.rs
examples/toy_examples/: Cargo.toml
examples/toy_examples/src/: main.rs
fg_ifc_library/macros/: Cargo.toml  README.md
fg_ifc_library/macros/src/: lib.rs  old.rs
fg_ifc_library/typing_rules/: Cargo.toml
fg_ifc_library/typing_rules/src/: dynamic_release.rs  function_rewrite.rs  implicit.rs  lattice.rs  lib.rs  operations.rs  secure_io.rs
(+36 files in other folders)
