[package]
name = "toy_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["v4"] }
macros = { path = "../../fg_ifc_library/macros" }
typing_rules = { path = "../../fg_ifc_library/typing_rules" }